[tool.poetry]
name = "repl_python3_BronzeAmusingJavabytecode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
webbot = "^0.34"
replit = "^3.0.0"
cursor = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
